# JupiterLI

./: .gitignore  CLAUDE.md  README.md  producer.py  pyobserve.py  pyproject.toml  redis_utils.py  test-app2.py
examples/: producer.py  producer.ttl  show-python-classes.py
jupiterli/: cli.py  config.py  plotter_loop.py
misc/rdf-config/: CLAUDE.md  config.ttl  process-config.py
pyobserve/: cli.py  config.py  plots.py  redis_utils.py
