[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobserve"
version = "0.1.0"
dependencies = [
    "redis",
    "nicegui",
    "plotly",
    "rdflib",
]

[project.scripts]
pyobserve = "pyobserve.cli:main"

[tool.setuptools.packages.find]
include = ["pyobserve*"]
