[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jupiterli"
version = "0.1.0"
dependencies = [
    "redis",
    "nicegui",
    "plotly",
    "rdflib",
]

[project.scripts]
jupiterli = "jupiterli.cli:main"

[tool.setuptools.packages.find]
include = ["jupiterli*"]
